<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">HowAreU</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Home Fragment -->
    <string name="home_to_do_list">To do:</string>
    <string name="home_activity">Activity:</string>
    <string name="home_journal">Journal (optional): </string>


    <string name="very_sad">Very Sad</string>
    <string name="sad">Sad</string>
    <string name="neutral">Neutral</string>
    <string name="happy">Happy</string>
    <string name="very_happy">Very Happy</string>


    <string name="stats_mood_count">Mood Count:</string>
    <string name="stats_mood_count_percentage">Mood Count:</string>
    <string name="stats_mood_summary">Mood Summary:</string>
    <string name="stats_mood_summary_m">Mood for the month:</string>

    <string name="about_us"> \t\t Welcome to our mood and activity monitoring application called How Are U. This application is dedicated in prioritizing your mental health while helping you achieve a blissful lifestyle. We have provided the necessary tools and resources to monitor and manage your moods and activities.
                         \n \t \t  Our application simplifies the process of tracking your activities and monitoring mood changes, allowing you to identify important factors that impact your mental health. We aim to identify patterns and trends that may indicate the need for intervention or support by collecting and analyzing your inputed data.
                          \n \t \t  Our mission in developing this application is to assist you in attaining and maintaining your optimal mental well-being because we understand that mental health is a complex and individualized matter that affects each person uniquely.
                           \n \t \t We provide you with necessary tools, resources, and personalized support to empower you in taking an active role in your mental well-being. By actively engaging in your mental health, we firmly believe that you can achieve a happier and more fulfilling life. Our application will support you throughout your journey.
    </string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>