<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.fragments.StatisticsFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-108dp"
        tools:layout_editor_absoluteY="0dp"
        android:orientation="vertical"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewGraph"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:elevation="10dp"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="2">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stats_mood_count"
                android:textSize="23sp"
                android:textStyle="bold"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <org.eazegraph.lib.charts.PieChart
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/piechart"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="6dp"
                    android:layout_weight="1"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="15dp"

                    />

                <!--Creating another linear layout -->
                <!-- to display pie chart details -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical">

                        <View
                            android:layout_width="15dp"
                            android:layout_height="match_parent"
                            android:background="@color/very_sad"/>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/very_sad"
                            android:paddingLeft="10dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="5dp">

                        <View
                            android:layout_width="15dp"
                            android:layout_height="match_parent"
                            android:background="@color/sad"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sad"
                            android:paddingLeft="10dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="5dp">

                        <View
                            android:layout_width="15dp"
                            android:layout_height="match_parent"
                            android:background="@color/neutral"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/neutral"
                            android:paddingLeft="10dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="5dp">

                        <View
                            android:layout_width="15dp"
                            android:layout_height="match_parent"
                            android:background="@color/happy"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/happy"
                            android:paddingLeft="10dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="5dp">

                        <View
                            android:layout_width="15dp"
                            android:layout_height="match_parent"
                            android:background="@color/very_happy"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/very_happy"
                            android:paddingLeft="10dp"/>

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardViewGraph"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            android:id="@+id/details">

            <!--Relative layout to display -->
            <!-- use of programming languages -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--Text view to use of -->
                <!-- programming languages text-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stats_mood_count_percentage"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="20dp"/>

                <!--View to display the line-->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_two"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="25dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <!--Text view to display R -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/very_sad"
                        android:textSize="18sp"/>

                    <!--Text view to display the -->
                    <!-- percentage of programming language -->
                    <!-- used. For now default set to 0-->
                    <TextView
                        android:id="@+id/textVerySad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:fontFamily="sans-serif-light"
                        android:text="0"
                        android:textAlignment="textEnd"
                        android:textColor="@color/color_one"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <!--View to display the line-->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_two"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="25dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/sad"
                        android:textSize="18sp"/>

                    <!--Text view to display the percentage -->
                    <!-- of programming language used. -->
                    <!-- For now default set to 0-->

                    <TextView
                        android:id="@+id/textSad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:fontFamily="sans-serif-light"
                        android:text="0"
                        android:textAlignment="textEnd"
                        android:textColor="@color/color_one"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_two"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="25dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/neutral"
                        android:textSize="18sp"/>

                    <!--Text view to display the percentage -->
                    <!-- of programming language used. -->
                    <!-- For now default set to 0-->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:id="@+id/textNeutral"
                        android:textAlignment="textEnd"
                        android:textSize="18sp"
                        android:textColor="@color/color_one"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-light"
                        android:layout_alignParentRight="true"/>

                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_two"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="25dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/happy"
                        android:textSize="18sp"/>

                    <!--Text view to display the percentage -->
                    <!-- of programming language used. -->
                    <!-- For now default set to 0-->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:id="@+id/textHappy"
                        android:textAlignment="textEnd"
                        android:textSize="18sp"
                        android:textColor="@color/color_one"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-light"
                        android:layout_alignParentRight="true"/>

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_two"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="25dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/very_happy"
                        android:textSize="18sp" />

                    <!--Text view to display the percentage -->
                    <!-- of programming language used. -->
                    <!-- For now default set to 0-->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:id="@+id/textVeryHappy"
                        android:textAlignment="textEnd"
                        android:textSize="18sp"
                        android:textColor="@color/color_one"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-light"
                        android:layout_alignParentRight="true"/>

                </RelativeLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            android:id="@+id/calendarCardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stats_mood_summary"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:id="@+id/month_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="23sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"/>

                <GridView
                    android:id="@+id/calendarGrid"
                    android:layout_width="match_parent"
                    android:layout_height="600dp"
                    android:numColumns="7"
                    android:stretchMode="columnWidth"
                    android:gravity="center"
                    android:horizontalSpacing="5dp"
                    android:verticalSpacing="1dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

    </ScrollView>



</FrameLayout>