<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.fragments.HomeFragment"
    android:background="#00000000"
    android:fitsSystemWindows="true">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
         >

        <!-- Your existing layout goes here -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-108dp"
        tools:layout_editor_absoluteY="0dp"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topPart"
            android:layout_width="411dp"
            android:layout_height="235dp"
            android:background="@drawable/plant">


            <include
                android:id="@+id/date_for_fragment_home"
                layout="@layout/date_for_fragment_home"
                android:layout_width="120dp"
                android:layout_height="150dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="256dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_activity"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/activity_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="6dp"
                android:layout_marginLeft="2dp"
                android:layout_marginBottom="20dp"
                android:gravity="center">
                <Button
                    android:id="@+id/btnAddActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Add"
                    android:textColor="@color/white"
                    android:background="@drawable/round_gradient"/>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_to_do_list"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/todo_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="6dp"
            android:layout_marginLeft="2dp"
            android:gravity="center"
            android:layout_marginBottom="20dp">
            <Button
                android:id="@+id/btnAddTodo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add"

                android:textColor="@color/white"
                android:background="@drawable/round_gradient"/>
        </LinearLayout>
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_journal"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    />

                <Switch
                    android:id="@+id/isPrivate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Private"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"/>


            </LinearLayout>


            <EditText
                android:id="@+id/journalInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:minLines="5"
                android:scrollbars="vertical"
                android:textSize="16sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save"

                android:textColor="@color/white"
                android:background="@drawable/round_gradient"/>


        </LinearLayout>

    </LinearLayout>

    </ScrollView>


</FrameLayout>